--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
         "bootstrap": "^5.1.3",
+        "emailjs-com": "^3.2.0",
+        "firebase": "^9.4.0",
         "react": "^17.0.1",
         "react-bootstrap": "^2.0.2",
         "react-dom": "^17.0.1",
+        "react-google-button": "^0.7.2",
         "react-icons": "^4.3.1",
         "react-rating-stars-component": "^2.2.0",
         "react-router-dom": "^6.0.1",
